--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-react",
-  "homepage": "https://dineshkumarkannan.github.io/react-todo/",
+  "homepage": "http://dineshkumarkannan.in/react-todo/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
